kubernetes/apps/landing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing
  labels:
    name: landing
