kubernetes/apps/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: landing
  labels:
    app: landing
spec:
  selector:
    app: landing
  ports:
    - port: 3000
      targetPort: 3000
      name: http
