kubernetes/apps/landing/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: landing
  namespace: landing
  labels:
    app: landing
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nihalxkumar.dev`) || Host(`www.nihalxkumar.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: landing
          port: 80
  tls:
    secretName: nihalxkumar-dev-tls
